Revert "fix(radio): vertical align"
This reverts commit f8c170117da43307f5ccfc8d50246160d722b922.

--- a/src/radio/radio.less
+++ b/src/radio/radio.less
@@ -29,7 +29,7 @@
 .@{prefix}-radio {
   position: relative;
   display: inline-flex;
-  align-items: center;
+  vertical-align: middle;
   font-size: @radio-font-size;
   background: @radio-bg-color;
   position: relative;
